--- a/WebAssetManager/WebAssetManager.csproj
+++ b/WebAssetManager/WebAssetManager.csproj
@@ -193,14 +193,28 @@
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="DAL\ApplicationDbContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Migrations\201708251917170_InitialCreate.cs" />
+    <Compile Include="Migrations\201708251917170_InitialCreate.Designer.cs">
+      <DependentUpon>201708251917170_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708260152486_Yan Zhang.cs" />
+    <Compile Include="Migrations\201708260152486_Yan Zhang.Designer.cs">
+      <DependentUpon>201708260152486_Yan Zhang.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708260239444_BaseModel.cs" />
+    <Compile Include="Migrations\201708260239444_BaseModel.Designer.cs">
+      <DependentUpon>201708260239444_BaseModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\Portfolio.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\InvestmentAccount.cs" />
-    <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ViewModels\ManageViewModels.cs" />
     <Compile Include="Models\Positions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -266,7 +280,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="DAL\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -280,6 +293,17 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201708251917170_InitialCreate.resx">
+      <DependentUpon>201708251917170_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708260152486_Yan Zhang.resx">
+      <DependentUpon>201708260152486_Yan Zhang.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708260239444_BaseModel.resx">
+      <DependentUpon>201708260239444_BaseModel.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
