add authorization to all controller

--- a/WebAssetManager/WebAssetManager.csproj
+++ b/WebAssetManager/WebAssetManager.csproj
@@ -283,6 +283,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\jquery-ui.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -296,6 +297,7 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-ui.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -368,6 +370,11 @@
     <Content Include="Views\WatchLists\Details.cshtml" />
     <Content Include="Views\WatchLists\Edit.cshtml" />
     <Content Include="Views\WatchLists\Index.cshtml" />
+    <Content Include="Views\Strategies\Create.cshtml" />
+    <Content Include="Views\Strategies\Delete.cshtml" />
+    <Content Include="Views\Strategies\Details.cshtml" />
+    <Content Include="Views\Strategies\Edit.cshtml" />
+    <Content Include="Views\Strategies\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
